# tree-trunk-mapper

./: .gitignore  README.md  pyproject.toml
config/: default_params.yaml
examples/: benchmark.py  benchmark_results.csv  demo.ipynb
launch/: trunk_detector.launch.py
ros2_node/: __init__.py  conversions.py  trunk_detector_node.py
src/tree_trunk_mapper/: __init__.py  cli.py  detector.py  export.py  loader.py  mapper.py  streaming.py
src/tree_trunk_mapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_conversions.py  test_detector.py  test_export.py  test_mapper.py  test_streaming.py
